# linux_space

./: .gitignore  test.py
colcon_ws/: .gitignore
colcon_ws/src/gimbal_interfaces/: CMakeLists.txt  package.xml
colcon_ws/src/gimbal_interfaces/msg/: TargetInfo.msg
colcon_ws/src/target_tracking_pkg/: package.xml  setup.cfg  setup.py
colcon_ws/src/target_tracking_pkg/config/: params.yaml
colcon_ws/src/target_tracking_pkg/launch/: target_run.launch.py
colcon_ws/src/target_tracking_pkg/target_tracking_pkg/: paper_control_node.py  paper_tracker_node.py
colcon_ws/src/vision_pkg_py/: package.xml  setup.cfg  setup.py
colcon_ws/src/vision_pkg_py/config/: params.yaml
colcon_ws/src/vision_pkg_py/launch/: debug_vision.launch.py
colcon_ws/src/vision_pkg_py/vision_pkg_py/: control_node.py  vision_node.py
colcon_ws/src/vision_pkg_py/vision_pkg_py/scripts/: calibrate_color.py
